--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,19 +6,47 @@
         "jsx": true
       }
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime"],
-    "plugins": ["react"],
+    "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime", "airbnb"],
+    "plugins": ["react", "react-native", "react-hooks", "jsx-a11y", "import"],
     "rules": {
+      "no-duplicate-imports": "error",
+      // "import/order": "error",
+      // "import/no-unresolved": ["error", {"commonjs": true, "caseSensitive": true}],
+      "import/no-namespace": "error",
+    // "import/no-relative-parent-imports": "error",
+    "import/no-anonymous-default-export": [
+      "error",
+      {
+        "allowArray": true,
+        "allowArrowFunction": false,
+        "allowAnonymousClass": false,
+        "allowAnonymousFunction": false,
+        "allowCallExpression": true, // The true value here is for backward compatibility
+        "allowLiteral": true,
+        "allowObject": true
+      }
+    ],
+      "no-use-before-define" : "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "linebreak-style": "off",
+      "semi": ["error", "never"],
+      "react/prop-types": "off",
+      "comma-dangle": ["error", "never"],
+      "padded-blocks": "off",
+      "arrow-body-style": "off",
+      "react-hooks/exhaustive-deps": "warn",
+      "react-native/no-unused-styles": "warn",
+      "react-native/split-platform-components": 2,
       "react/jsx-indent" : ["error",4],
       "react/jsx-indent-props" : ["error", 4],
       "react/jsx-fragments": "error",
       "indent": "error",
-      "react/react-in-jsx-scope": "error",
-      "react/prop-types" : "off",
+      "react/react-in-jsx-scope": "off",
       "no-unused-vars": "off",
       "no-undef": "off"
     },
     "settings": {
+      // "import/resolver":"my-awesome-npm-module",
       "react": {
         "version": "detect"
       }
