(fix) - eslint fix

--- a/app.json
+++ b/app.json
@@ -25,9 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "webpack": {
-      "config": "@expo/webpack-config"
     }
+    // "webpack": {
+    //   "config": "@expo/webpack-config"
+    // }
   }
 }
