--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
   {
     "parserOptions": {
       "ecmaVersion": "latest",
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
+      "sourceType": "module"
     },
     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:react/jsx-runtime", "airbnb"],
     "plugins": ["react", "react-native", "react-hooks", "jsx-a11y", "import"],
@@ -38,6 +35,7 @@
       "react-native/no-unused-styles": "warn",
       "react-native/split-platform-components": 2,
       "react/jsx-indent" : ["error",4],
+      "react/no-array-index-key" : "off",
       "react/jsx-indent-props" : ["error", 4],
       "react/jsx-fragments": "error",
       "indent": "error",
