--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@candlefinance/slider": "^0.1.4",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-community/slider": "^4.5.0",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "expo": "~50.0.8",
