--- a/app.json
+++ b/app.json
@@ -11,6 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "plugins": [
+      "react-native-ble-plx"
+    ],
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -21,11 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.BLUETOOTH_CONNECT"
+      ],
+      "package": "com.afkdev.brainwave"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
-
   }
 }
