--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "expo": "~50.0.8",
     "expo-device": "^5.9.3",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-select-dropdown": "^3.4.0",
-    "expo-system-ui": "~2.9.3"
+    "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
