--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "expo": "~50.0.8",
+    "expo-asset": "^9.0.2",
     "expo-device": "^5.9.3",
+    "expo-document-picker": "^11.10.1",
+    "expo-sharing": "^11.10.0",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "nativewind": "^2.0.11",
