--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
-    "expo": "~50.0.8",
+    "expo": "^51.0.8",
     "expo-device": "^5.9.3",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
