--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "@candlefinance/slider": "^0.1.4",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "expo": "^51.0.8",
-    "expo-device": "^5.9.3",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-device": "~6.0.2",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
