--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.20",
     "expo": "^51.0.8",
     "expo-device": "~6.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "nativewind": "^2.0.11",
