--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-select-dropdown": "^3.4.0"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
