--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SERVICE_UUID = de1bf7ab-1ca8-40a3-b797-6221c2acb33d
 CHARACTERISTIC_UUID = 3559f95b-3857-43f1-a7e0-cc0ab0542afc
+
+TARGET_DEVICE_NAME=ESP32_BLE
