--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -28,6 +29,7 @@
     "react-native-ble-plx": "^3.1.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^3.4.0",
