feat() - conection done v2 - fix some bug

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=development
 SERVICE_UUID = de1bf7ab-1ca8-40a3-b797-6221c2acb33d
 CHARACTERISTIC_UUID = 3559f95b-3857-43f1-a7e0-cc0ab0542afc
 
