--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^51.0.8",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "install": "^0.13.0",
