feat() - fix prod

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 9.2.0"
+    "version": ">= 9.2.0",
+     "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -11,6 +12,7 @@
       "distribution": "internal"
     },
     "production": {
+    "autoIncrement": true,
       "android": {
         "buildType": "apk"
       }
